correção de bordas

--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Jogo do Humor" />
-    <meta
-      property="og:description"
-      content="Projeto desenvolvido por Dener Batista, solicitado pela BlueEdtch para fins educacionais."
-    />
-    <meta
-      property="og:image"
-      content="https://denerbatista.github.io/projeto_humor/assets/img/social.png"
-    />
+    <meta property="og:description"  content="Projeto desenvolvido por Dener Batista, solicitado pela BlueEdtch para fins educacionais."/>
+    <meta property="og:image" content="https://denerbatista.github.io/projeto_humor/assets/img/social.png"/>
     <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="1570" />
-    <meta property="og:image:height" content="752" />
+    <meta property="og:image:width" content="1570"/>
+    <meta property="og:image:height" content="752"/>
     <link rel="shortcut icon" type="imagex/png" href="https://cdn.discordapp.com/attachments/947324026236330018/965343050052296744/image.ico">
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Jogo do Humor</title>
