add humor inicial ocioso e alteração de responsividade

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Jogo do Humor</title>
   </head>
+  
   <audio  autoplay>
     <source
       src="https://cdn.discordapp.com/attachments/947324026236330018/965153686504497152/sorridente.mp3"
@@ -21,19 +22,22 @@
       id="music"
     />
   </audio>
+
   <body>
+
     <header>
       <h1>Jogo do Humor</h1>
     </header>
 
     <main>
+
       <div id="bloco">
-        <h2>Sorridente</h2>
+        <h2>Ocioso</h2>
 
         <figure>
           <img
-            src="https://cdn.discordapp.com/attachments/947324026236330018/964988051518545980/image.png"
-            alt="Humor Sorridente"
+            src="https://cdn.discordapp.com/attachments/947324026236330018/965488442966421554/image.png"
+            alt="Humor"
             id="imagem"
           />
         </figure>
@@ -52,7 +56,7 @@
 
       </div>
     </main>
-    <footer>Desenvolvido por:  <a href="https://www.linkedin.com/in/dener-gomes-batista-83894168/">Dener Batista</a></footer>
+    <footer>Desenvolvido por: <a href="https://www.linkedin.com/in/dener-gomes-batista-83894168/">Dener Batista</a></footer>
 
   </body>
   <script type="text/javascript" src="./assets/js/script.js"></script>
