Troca de texto inicial

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
 
       <div id="bloco">
-        <h2>Ocioso</h2>
+        <h2>Aguardando mudança</h2>
 
         <figure>
           <img
